--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Material Design Bootstrap -->
     <link href="/css/mdb.min.css" rel="stylesheet" />
+    <link href="/css/addons-pro/cards-extended.min.css" rel="stylesheet">
     <style>
       .card-wrapper {
         height: 500px !important;
