增加簡易版紀錄

--- a/views/five_question.ejs
+++ b/views/five_question.ejs
@@ -261,7 +261,8 @@
           'data': {
             selected_ans: selected_ans,
             wrong_ans: wrong_ans,
-            question: $("#question").val()
+            question: $("#question").val(),
+            ans: ans
           },
           success: function (data) {
             alert('儲存成功！請手動重整網站')
