--- a/views/logs.ejs
+++ b/views/logs.ejs
@@ -91,7 +91,15 @@
                     <!-- Content -->
                     <div class="card-body white animated">
                         <p class="text-muted">需要加強的 ITTO</p>
-                        紀錄功能開發中...  66666
+                        <% for(var i = 0; i < data.length; i++){ %>
+                            if(data[i].wrong_ans != []){
+                                <h5 class="text-center py-4">
+                                    <strong><%= data[i].question %></strong>
+                                </h5>
+                                <p>選錯的答案： <%= data[i].wrong_ans %></p>
+                                <p>應選的答案： <%= data[i].ans %></p>
+                            }
+                        <% } %>    
                     </div>
                 </div>
                 <!-- Card -->
