add main viewing

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,10 +28,10 @@
 
     <footer>
         <nav class="navbar fixed-bottom navbar-expand-lg navbar-dark pm-mav">
-            <div class="col footer-icon"><i class="fas fa-home"></i> <span>Home</span></div>
-            <div class="col footer-icon"><i class="fas fa-home"></i> <span>Home</span></div>
-            <div class="col footer-icon"><i class="fas fa-home"></i> <span>Home</span></div>
-            <div class="col footer-icon"><i class="fas fa-home"></i> <span>Home</span></div>
+            <div class="col footer-icon"><i class="fas fa-home"></i><br/><span class="footer-word">Home</span></div>
+            <div class="col footer-icon"><i class="fas fa-home"></i><br/><span class="footer-word">考試診療</span></div>
+            <div class="col footer-icon"><i class="fas fa-home"></i><br/><span class="footer-word">英文診療</span></div>
+            <div class="col footer-icon"><i class="fas fa-home"></i><br/><span class="footer-word">關於我</span></div>
         </nav>
     </footer>
 
