add accordion to the UI in account pages

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -20,6 +20,17 @@
 
     <pm-header></pm-header>
 
+    <pm-container style="position: absolute;top: 10%;left: 0%;width: 100%;max-width: 100%;">
+        <!--Accordion wrapper-->
+        <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+            <pm-accordion item-id="collapseTwo12"></pm-accordion>
+            <pm-accordion item-id="collapseTwo13"></pm-accordion>
+            <pm-accordion item-id="collapseTwo14"></pm-accordion>
+
+        </div>
+        <!-- Accordion wrapper -->
+    </pm-container>
+
     <pm-footer></pm-footer>
 
     <!-- bower:js -->
@@ -31,8 +42,9 @@
 
     <script src="/app.js"></script>
     <script src="/components/shared/header.js"></script>
+    <script src="/components/shared/container.js"></script>
     <script src="/components/shared/footer.js"></script>
-    <script src="/components/card/card.js"></script>
+    <script src="/components/accordion/accordion.js"></script>
 
     <!-- JQuery -->
     <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
